--- a/index.html
+++ b/index.html
@@ -1,64 +1,114 @@
-<!doctype html>
+<!DOCTYPE html>
 <html>
   <head>
-    <meta charset="utf-8">
-    <meta http-equiv="X-UA-Compatible" content="chrome=1">
-    <title>Generadorrompecabezas by oscaruhp</title>
+    <title>Generador Rompecabezas </title>
+	
+	<link rel="stylesheet" href="bootstrap.min.css" >
+	<script src="jquery.min.js"></script>
 
-    <link rel="stylesheet" href="stylesheets/styles.css">
-    <link rel="stylesheet" href="stylesheets/github-light.css">
-    <meta name="viewport" content="width=device-width">
-    <!--[if lt IE 9]>
-    <script src="//html5shiv.googlecode.com/svn/trunk/html5.js"></script>
-    <![endif]-->
+	
+	<script src="jquery.cropit.js"></script>
+	<style>
+.cropit-preview {
+	  background-color: #f8f8f8;
+	  background-size: cover;
+	  border: 1px solid #ccc;
+	  border-radius: 3px;
+	  margin-top: 7px;
+	  width: 802px;height: 602px;
+}
+.cropit-preview-image-container {  
+	cursor: move;
+}
+.image-size-label { 
+	margin-top: 10px; 
+}
+input, .export { 
+	display: block; 
+}
+button { 
+	margin-top: 10px; 
+}
+	</style>
+	<style media="print">
+	.ocultar{display:none;}
+	.centrado{text-align: center;}
+	</style>
+	
   </head>
-  <body>
-    <div class="wrapper">
-      <header>
-        <h1>Generadorrompecabezas</h1>
-        <p></p>
-
-        <p class="view"><a href="https://github.com/oscaruhp/generadorRompecabezas">View the Project on GitHub <small>oscaruhp/generadorRompecabezas</small></a></p>
-
-
-        <ul>
-          <li><a href="https://github.com/oscaruhp/generadorRompecabezas/zipball/master">Download <strong>ZIP File</strong></a></li>
-          <li><a href="https://github.com/oscaruhp/generadorRompecabezas/tarball/master">Download <strong>TAR Ball</strong></a></li>
-          <li><a href="https://github.com/oscaruhp/generadorRompecabezas">View On <strong>GitHub</strong></a></li>
-        </ul>
-      </header>
-      <section>
-        <h3>
-<a id="welcome-to-github-pages" class="anchor" href="#welcome-to-github-pages" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Welcome to GitHub Pages.</h3>
-
-<p>This automatic page generator is the easiest way to create beautiful pages for all of your projects. Author your page content here <a href="https://guides.github.com/features/mastering-markdown/">using GitHub Flavored Markdown</a>, select a template crafted by a designer, and publish. After your page is generated, you can check out the new <code>gh-pages</code> branch locally. If you’re using GitHub Desktop, simply sync your repository and you’ll see the new branch.</p>
-
-<h3>
-<a id="designer-templates" class="anchor" href="#designer-templates" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Designer Templates</h3>
-
-<p>We’ve crafted some handsome templates for you to use. Go ahead and click 'Continue to layouts' to browse through them. You can easily go back to edit your page before publishing. After publishing your page, you can revisit the page generator and switch to another theme. Your Page content will be preserved.</p>
-
-<h3>
-<a id="creating-pages-manually" class="anchor" href="#creating-pages-manually" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Creating pages manually</h3>
-
-<p>If you prefer to not use the automatic generator, push a branch named <code>gh-pages</code> to your repository to create a page manually. In addition to supporting regular HTML content, GitHub Pages support Jekyll, a simple, blog aware static site generator. Jekyll makes it easy to create site-wide headers and footers without having to copy them across every page. It also offers intelligent blog support and other advanced templating features.</p>
-
-<h3>
-<a id="authors-and-contributors" class="anchor" href="#authors-and-contributors" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Authors and Contributors</h3>
-
-<p>You can @mention a GitHub username to generate a link to their profile. The resulting <code>&lt;a&gt;</code> element will link to the contributor’s GitHub Profile. For example: In 2007, Chris Wanstrath (<a href="https://github.com/defunkt" class="user-mention">@defunkt</a>), PJ Hyett (<a href="https://github.com/pjhyett" class="user-mention">@pjhyett</a>), and Tom Preston-Werner (<a href="https://github.com/mojombo" class="user-mention">@mojombo</a>) founded GitHub.</p>
-
-<h3>
-<a id="support-or-contact" class="anchor" href="#support-or-contact" aria-hidden="true"><span aria-hidden="true" class="octicon octicon-link"></span></a>Support or Contact</h3>
-
-<p>Having trouble with Pages? Check out our <a href="https://help.github.com/pages">documentation</a> or <a href="https://github.com/contact">contact support</a> and we’ll help you sort it out.</p>
-      </section>
-      <footer>
-        <p>This project is maintained by <a href="https://github.com/oscaruhp">oscaruhp</a></p>
-        <p><small>Hosted on GitHub Pages &mdash; Theme by <a href="https://github.com/orderedlist">orderedlist</a></small></p>
-      </footer>
-    </div>
-    <script src="javascripts/scale.fix.js"></script>
-    
-  </body>
+<body>
+   <div class="container">
+		<div class="row image-editor">
+		<div class="col-md-4 ocultar">
+		<br/><br/>
+		<div class="alert alert-danger">
+			<h4><strong>Paso 1.- Selecciona una imagen</strong></h4>
+			<input type="file" class="cropit-image-input btn btn-info btn-lg btn-block">
+			<input type="range" class="cropit-image-zoom-input btn btn-info btn-lg btn-block">
+			<button class="rotate-ccw btn btn-info btn-lg btn-block">Rotar</button>
+			
+		</div>
+		<div class="alert alert-info">
+			<h4><strong>Paso 2.- Generar Rompecabezas</strong></h4>
+			 <button class="export btn btn-info btn-lg btn-block">Generar Rompecabezas</button>
+		</div>
+		<div class="alert alert-success">
+			  <h4><strong>Paso 3.- Imprime Rompecabezas</strong></h4>
+			  <input onclick="window.print();" class="export btn btn-info btn-lg btn-block" value="Imprimir"/>
+		</div>
+		<div class="alert alert-warning">
+			<button onclick="location.reload();" class="export btn btn-info btn-lg btn-block">Reiniciar</button>
+		</div>
+		
+		
+		</div>
+		
+		
+		<div class="col-md-8">
+		<br/>
+		<div class="cropit-preview ocultar" ></div>
+		<div class="centrado"><canvas id="canvas" ></canvas></div>
+		</div>
+		</div>
+   </div>
+   <script>
+   $(function() {
+	 $('.image-editor').cropit();
+	 $('.rotate-ccw').click(function() { $('.image-editor').cropit('rotateCW');});
+	 
+	 $('.export').click(function() {
+		$('.cropit-preview').hide();
+		var imageData = $('.image-editor').cropit('export'); // Base64
+		
+		var canvas = document.getElementById("canvas");
+		canvas.width  = 801;
+		canvas.height = 602;
+		
+		var ctx = canvas.getContext("2d");
+		var imagesLoaded = 0;
+		
+		var image = new Image();
+		var image2 = new Image();
+		image.src=imageData;
+		image2.src = "PlantillaRomeCabezas1.png";
+		
+		image2.onload = function() {
+			 ctx.drawImage(image, 0, 0);
+			 ctx.drawImage(image2, 0, 0);
+		};
+			
+		
+	 });
+   
+   });
+   </script>
+</body>
 </html>
+
+
+
+
+
+
+
+
