--- a/index.html
+++ b/index.html
@@ -38,6 +38,18 @@ button {
   </head>
 <body>
    <div class="container">
+   <div class="ocultar text-center">   <script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<script async src="//pagead2.googlesyndication.com/pagead/js/adsbygoogle.js"></script>
+<!-- Header -->
+<ins class="adsbygoogle"
+     style="display:inline-block;width:728px;height:90px"
+     data-ad-client="ca-pub-4331617637495482"
+     data-ad-slot="2764029251"></ins>
+<script>
+(adsbygoogle = window.adsbygoogle || []).push({});
+</script>
+</div>
+
 		<div class="row image-editor">
 		<div class="col-md-4 ocultar">
 		<br/><br/>
